// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TextInput /> > labelTitle > sets label 1`] = `
<div
  class="tw:form-control "
>
  <label
    class="tw:label"
  >
    <span
      class="tw:label-text tw:text-base-content "
    >
      My Title
    </span>
  </label>
  <input
    class="tw:input tw:input-bordered tw:w-full "
    placeholder=""
    required=""
    type="text"
    value=""
  />
</div>
`;

exports[`<TextInput /> > renders properly 1`] = `
<div
  class="tw:form-control "
>
  <input
    class="tw:input tw:input-bordered tw:w-full "
    placeholder=""
    required=""
    type="text"
    value=""
  />
</div>
`;
